[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "spendkey"
version = "1.0.0"
description = "Derive all Monero keys and address from a private spend key or mnemonic"
requires-python = ">=3.8"
dependencies = ["monero"]

[project.scripts]
spendkey = "spendkey.cli:main"
